# Wishlist_project

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
static/css/: album.css  image_size.css
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_verification_token_alter_user_email_and_more.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  user_edit.html  users_list.html  verify_email.html
wishlist/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
wishlist/management/commands/: fill.py
wishlist/migrations/: 0001_initial.py  0002_alter_wishlist_image.py  0003_alter_wishlist_options_alter_wishlist_url.py  0004_wishlist_is_active.py  0005_wishlist_slug_wishlist_views_count.py  0006_alter_wishlist_views_count.py
wishlist/templates/wishlist/: base.html  index.html  wishlist_confirm_delete.html  wishlist_detail.html  wishlist_form.html  wishlist_list .html  wishlist_personal_page.html
wishlist/templates/wishlist/includes/: inc_main_menu.html
